--- a/package.json
+++ b/package.json
@@ -1,25 +1,131 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.18",
+    "bootstrap": "^4.0.0",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.5.22"
+  },
+  "name": "npm",
+  "description": "## Laravel 5.7 API that uses the API resources with a Vue.js frontend",
+  "version": "1.0.0",
+  "main": "webpack.mix.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "accepts": "^1.3.5",
+    "acorn": "^5.7.3",
+    "acorn-dynamic-import": "^3.0.0",
+    "adjust-sourcemap-loader": "^1.2.0",
+    "ajv": "^6.7.0",
+    "ajv-errors": "^1.0.1",
+    "ajv-keywords": "^3.2.0",
+    "alphanum-sort": "^1.0.2",
+    "ansi-colors": "^3.2.3",
+    "ansi-html": "^0.0.7",
+    "ansi-regex": "^2.1.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^2.0.0",
+    "aproba": "^1.2.0",
+    "argparse": "^1.0.10",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-flatten": "^1.1.1",
+    "array-union": "^1.0.2",
+    "array-uniq": "^1.0.3",
+    "array-unique": "^0.3.2",
+    "arrify": "^1.0.1",
+    "asn1.js": "^4.10.1",
+    "assign-symbols": "^1.0.0",
+    "ast-types": "^0.9.6",
+    "async": "^2.6.1",
+    "async-each": "^1.0.1",
+    "atob": "^2.1.2",
+    "autoprefixer": "^9.4.5",
+    "babel-loader": "^8.0.5",
+    "babel-merge": "^2.0.1",
+    "balanced-match": "^1.0.0",
+    "base64-js": "^1.3.0",
+    "batch": "^0.6.1",
+    "big.js": "^5.2.2",
+    "binary-extensions": "^1.12.0",
+    "bluebird": "^3.5.3",
+    "bn.js": "^4.11.8",
+    "bonjour": "^3.5.0",
+    "boolbase": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "brorand": "^1.1.0",
+    "browserify-aes": "^1.2.0",
+    "browserify-cipher": "^1.0.1",
+    "browserify-des": "^1.0.2",
+    "browserify-rsa": "^4.0.1",
+    "browserify-sign": "^4.0.4",
+    "browserify-zlib": "^0.2.0",
+    "browserslist": "^4.4.1",
+    "buffer": "^4.9.1",
+    "buffer-from": "^1.1.1",
+    "buffer-indexof": "^1.1.1",
+    "buffer-xor": "^1.0.3",
+    "builtin-status-codes": "^3.0.0",
+    "bytes": "^3.0.0",
+    "cacache": "^11.3.2",
+    "cache-base": "^1.0.1",
+    "call-me-maybe": "^1.0.1",
+    "caller-callsite": "^2.0.0",
+    "caller-path": "^2.0.0",
+    "callsites": "^2.0.0",
+    "camel-case": "^3.0.0",
+    "camelcase": "^4.1.0",
+    "caniuse-api": "^3.0.0",
+    "caniuse-lite": "^1.0.30000929",
+    "chalk": "^2.4.2",
+    "charenc": "^0.0.2",
+    "chokidar": "^2.0.4",
+    "chownr": "^1.1.1",
+    "chrome-trace-event": "^1.0.0",
+    "cipher-base": "^1.0.4",
+    "clone-deep": "^2.0.2",
+    "coa": "^2.0.2",
+    "code-point-at": "^1.1.0",
+    "collection-visit": "^1.0.0",
+    "color": "^3.1.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "color-string": "^1.5.3",
+    "colors": "^1.1.2",
+    "commander": "^2.17.1",
+    "element-ui": "^2.4.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bayarsaikhan3033/Articles.git"
+  },
+  "keywords": [
+    "npm"
+  ],
+  "author": "Bayraa",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Bayarsaikhan3033/Articles/issues"
+  },
+  "homepage": "https://github.com/Bayarsaikhan3033/Articles#readme"
 }
